@@ -1,3 +1,8 @@
+2009-02-10  Simon Baldwin  <simonb@google.com>
+
+	* gcc.dg/lto/20090206-1_0.c: New.
+	* gcc.dg/lto/20090206-2_0.c: New.
+
 2009-02-09  Simon Baldwin  <simonb@google.com>
 
 	* lib/lto.exp (lto-get-options-main): Add support for suppressing
@@ -16,8 +21,8 @@
 
 2009-01-26  Simon Baldwin  <simonb@google.com>
 
-	* gcc/testsuite/gcc.dg/lto/20090126-1_0.c: New.
-	* gcc/testsuite/gcc.dg/lto/20090126-2_0.c: New.
+	* gcc.dg/lto/20090126-1_0.c: New.
+	* gcc.dg/lto/20090126-2_0.c: New.
 
 2009-01-21  Diego Novillo  <dnovillo@google.com>
 
